Aress7/src/objects/Work_Order_Task__c.object
<CustomObject>
    <fields>
        <fullName>ABB_Checklist_SAT_Form_Instructions__c</fullName>
        <formula>&quot;Go through the ABB SAT Checklist in the file attached from page 4 onwards, ignore Helios. Complete as much as possible and move to next task.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABB Checklist (SAT Form) Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Commissioning_Instructions__c</fullName>
        <formula>&quot;Once the SAT Form has been completed, call ABB&apos;s Commissioning Team on 01903836723 or 01903828323 and run through the remote commission process.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABB Commissioning Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Name_Sticker_Instructions__c</fullName>
        <formula>&quot;Place the user instruction sticker over the card reader and place assigned name sticker on the designated space on the instruction sticker (top right) and take a clear photo of this.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_PP_Commissioning__c</fullName>
        <formula>hyperlink(&quot;https://www.tfaforms.com/4602319&quot;,&quot;https://www.tfaforms.com/4602319&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABB PP Commissioning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Rapid_DC_Test_Charge_Instructions__c</fullName>
        <formula>&quot;Where access is possible, start using the DC Rapid outlet and call back ABB to confirm comms have been established and status shows as normal at their end. The Charger should only start charge by using the app, not the screen.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Required_Photos__c</fullName>
        <formula>&quot;Feeder-pillar / kiosk location&quot; &amp; BR() &amp;
&quot;Feeder-pillar / kiosk inside arrangements&quot; &amp; BR() &amp;
&quot;Feeder-pillar / kiosk circuit protection &amp; meter&quot; &amp; BR() &amp;
&quot;Entire unit (signage / guardrail incl.)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABB Required Photos</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Serial_Number_Instructions__c</fullName>
        <formula>&quot;Upload photo and note down ABB Rapid Charger Serial Number located on right-hand side of the unit below top barcode, beginning with &apos;T53-&apos;.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABB Serial Number Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Serial_Number__c</fullName>
        <label>ABB Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Works_Extra_Materials__c</fullName>
        <label>Additional Works &amp; Extra Materials</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Works_Quoting_Form__c</fullName>
        <formula>HYPERLINK(&quot;https://www.tfaforms.com/4654727?WO=&quot;&amp;Work_Order__r.WorkOrderNumber,&quot;https://www.tfaforms.com/4654727?WO=&quot;&amp;Work_Order__r.WorkOrderNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Works Quoting Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annex_D_Form__c</fullName>
        <description>- Fill out Signee Name and Relationship if different from customer
- Return to Work Order 
- Select &quot;Create Service Report&quot; on the quick action
- Complete &quot;Customer Signature&quot; and &quot;Installer Signature&quot;
- Click Generate Signed Report to complete</description>
        <label>Annex D Form</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Annex_D_Instructions__c</fullName>
        <defaultValue>&quot;- Fill out Signee Name and Relationship if different from customer&quot; &amp; BR()&amp; BR()&amp; 

&quot;- Return to Work Order&quot; &amp; BR()&amp; BR()&amp; 

&quot;- Select &apos;Create Service Report&apos; on the quick action&quot; &amp; BR()&amp; BR()&amp; 

&quot;- Complete &apos;Customer Signature&apos; and &apos;Installer Sign&apos;&quot; &amp; BR()&amp; BR()&amp; 

&quot;- Click Generate Signed Report to complete&quot;</defaultValue>
        <label>Annex D Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chargepoint_Rating_Amps__c</fullName>
        <label>Chargepoint Rating (Amps)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chargepoint_Rating__c</fullName>
        <label>Chargepoint Rating (kW)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3kW</fullName>
                </value>
                <value>
                    <fullName>7kW</fullName>
                </value>
                <value>
                    <fullName>22kW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercial_Survey_Form__c</fullName>
        <formula>HYPERLINK(&quot;https://www.tfaforms.com/4659999?WO=&quot;&amp;Work_Order__r.WorkOrderNumber,&quot;https://https://www.tfaforms.com/4659999?WO=&quot;&amp;Work_Order__r.WorkOrderNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial Survey Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commissioning_Form__c</fullName>
        <formula>HYPERLINK(&quot;https://www.tfaforms.com/4655667?WO=&quot;&amp;Work_Order__r.WorkOrderNumber,&quot;https://www.tfaforms.com/4655667?WO=&quot;&amp;Work_Order__r.WorkOrderNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commissioning Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Earthing_Arrangements__c</fullName>
        <description>Earthing Arrangements</description>
        <label>Earthing Arrangements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PME</fullName>
                </value>
                <value>
                    <fullName>TT</fullName>
                </value>
                <value>
                    <fullName>TNS</fullName>
                </value>
                <value>
                    <fullName>TNCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extra_Time_Required__c</fullName>
        <label>Extra Time Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Drive_Folder_Link__c</fullName>
        <formula>HYPERLINK(Work_Order__r.Google_Drive_Folder_Link__c,Work_Order__r.Google_Drive_Folder_Link__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Drive Folder Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Assessment_Form__c</fullName>
        <formula>HYPERLINK(&quot;https://www.tfaforms.com/4647553?WO=&quot;&amp;Work_Order__r.WorkOrderNumber,&quot;hhttps://www.tfaforms.com/4647553?WO=&quot;&amp;Work_Order__r.WorkOrderNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installation Assessment Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Fuse_Rating_Amps__c</fullName>
        <label>Main Fuse Rating (Amps)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Form_Trial__c</fullName>
        <formula>HYPERLINK(&quot;https://www.tfaforms.com/4675380?WO=&quot;&amp;Work_Order__r.WorkOrderNumber, &quot;https://www.tfaforms.com/4675380?WO=&quot;&amp;Work_Order__r.WorkOrderNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Form Trial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Form__c</fullName>
        <formula>HYPERLINK(&quot;https://www.tfaforms.com/4678430?WO=&quot;&amp;Work_Order__r.WorkOrderNumber, &quot;https://www.tfaforms.com/4678430?WO=&quot;&amp;Work_Order__r.WorkOrderNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Demand_Amps__c</fullName>
        <label>Maximum Demand (Amps)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Service_Cut_Out_Rating_Amps__c</fullName>
        <label>Property Service Cut Out Rating (Amps)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RAMs_Instructions__c</fullName>
        <defaultValue>&quot;Please follow the TFA link below to sign onto all relevant RAMS, including the generic RAMS. For a Non Routine RA or the sinking of an Earth Rod, please use the additional forms within the TFA.&quot;</defaultValue>
        <label>RAMs Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RAMs_TFA__c</fullName>
        <formula>HYPERLINK(&quot;https://www.tfaforms.com/4657122?CASE=&quot;&amp; Work_Order__r.Case.CaseNumber ,&quot;https://www.tfaforms.com/4657122?CASE=&quot;&amp;Work_Order__r.Case.CaseNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RAMs TFA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment_Form__c</fullName>
        <formula>HYPERLINK(&quot;https://www.tfaforms.com/4657122&quot;,&quot;https://www.tfaforms.com/4657122&quot;)&amp;BR()&amp;
&quot;Please proceed to fill out and sign the TFA form, confirming that you either accept the conditions of the generic RAMS attached to this job, or that a Non-Routine Risk Assessment needs to be completed.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On-site Risk Assessment Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Day?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signee_Name__c</fullName>
        <label>Signee Name (If not customer)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signee_Relationship__c</fullName>
        <label>Signee Relationship (If not customer)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Handover_Form__c</fullName>
        <formula>HYPERLINK(&quot;https://www.tfaforms.com/4655639?WO=&quot;&amp;Work_Order__r.WorkOrderNumber,&quot;https://www.tfaforms.com/4655639?WO=&quot;&amp;Work_Order__r.WorkOrderNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Handover Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Colour__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.ImageServer?id=0151o000004bR9j&amp;oid=00D4E0000001797&amp;lastMod=1516719485000&quot;, &quot;Red&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Colour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To Do</fullName>
                    <color>#3366FF</color>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Done</fullName>
                    <color>#33CC00</color>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Swap_Out_Form__c</fullName>
        <formula>HYPERLINK(&quot;https://www.tfaforms.com/4621132&quot;, &quot;https://www.tfaforms.com/4641106&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Swap Out Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <formula>Task__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <referenceTo>FSL_Tasks__c</referenceTo>
        <relationshipLabel>Work Order Tasks</relationshipLabel>
        <relationshipName>Work_Order_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_PSL_PG_number__c</fullName>
        <label>Unit PSL/PG number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VRN__c</fullName>
        <label>VRN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_RAMs_DomesticInstall__c</fullName>
        <formula>HYPERLINK(&quot;https://drive.google.com/file/d/16Pyyhgpukuys8VML25TL25itegwXQHgb/view?usp=sharing&quot;, &quot;Domestic Install RAMS&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View RAMs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_RAMs_EarthRod__c</fullName>
        <formula>HYPERLINK(&quot;https://drive.google.com/open?id=1SHD0udblHJ6F9Hju0-ryIfegfG52frl4&quot;,&quot;Sinking an Earth Rod RAMs&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View RAMs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_RAMs_Maintenance__c</fullName>
        <formula>HYPERLINK(&quot;https://drive.google.com/file/d/1vvLtF8kQPilcvTYB0tWUQE0SB5WQMLKZ/view?usp=sharing&quot;, &quot;Maintenance RAMS&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View RAMs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_RAMs_Survey__c</fullName>
        <formula>HYPERLINK(&quot;https://drive.google.com/file/d/1n2ahulEpsMYTXp0ffaA89eR1tZPFdjyO/view?usp=sharing&quot;, &quot;Site Survey RAMS&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View RAMs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_RAMs__c</fullName>
        <formula>&quot;By ticking this task as complete, you are confirming that you are fully conversant with conditions outlined in the attached RAMS. For any hazards that fall outside the scope of the attached RAMS, please contact a PM at the office to discuss.&quot; &amp; BR() &amp;
HYPERLINK(&quot;https://drive.google.com/file/d/16Pyyhgpukuys8VML25TL25itegwXQHgb/view?usp=sharing&quot;, &quot;Domestic Install RAMS&quot;) &amp; BR() &amp;
 HYPERLINK(&quot;https://drive.google.com/file/d/1vvLtF8kQPilcvTYB0tWUQE0SB5WQMLKZ/view?usp=sharing&quot;, &quot;Maintenance RAMS&quot;) &amp; BR() &amp;
 HYPERLINK(&quot;https://drive.google.com/file/d/1n2ahulEpsMYTXp0ffaA89eR1tZPFdjyO/view?usp=sharing&quot;, &quot;Site Survey RAMS&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View RAMs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wi_Fi_Connected__c</fullName>
        <label>Wi-Fi Connected?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Work Order Tasks</relationshipLabel>
        <relationshipName>Work_Order_Tasks</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Work Order Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WOT-{00000}</displayFormat>
        <label>Work Order Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Tasks</pluralLabel>
    <recordTypes>
        <fullName>ABB_Checklist_SAT_Form_Task</fullName>
        <active>true</active>
        <label>ABB Checklist (SAT Form) Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>ABB_Commissioning_Task</fullName>
        <active>true</active>
        <label>ABB Commissioning Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>ABB_Complete_Upload_EIC_Task</fullName>
        <active>true</active>
        <label>ABB Complete &amp; Upload EIC Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>ABB_Instructions_Name_Sticker_Task</fullName>
        <active>true</active>
        <label>ABB Instructions &amp; Name Sticker Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>ABB_PP_Commissioning</fullName>
        <active>true</active>
        <label>ABB PP Commissioning</label>
    </recordTypes>
    <recordTypes>
        <fullName>ABB_Rapid_DC_Test_Charge_Task</fullName>
        <active>true</active>
        <label>ABB Rapid DC Test Charge Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>ABB_Required_Photos</fullName>
        <active>true</active>
        <label>ABB Required Photos</label>
    </recordTypes>
    <recordTypes>
        <fullName>ABB_Serial_Number_Task</fullName>
        <active>true</active>
        <label>ABB Serial Number Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Additional_Works_Survey_Task</fullName>
        <active>true</active>
        <label>Additional Works Survey Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Annex_D_Form_Task</fullName>
        <active>true</active>
        <label>Annex D Form Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commercial_Survey_Form_Task</fullName>
        <active>true</active>
        <label>Commercial Survey Form Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commissioning_Form_Task</fullName>
        <active>true</active>
        <label>Commissioning Form Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>ENA_Form_Task</fullName>
        <active>true</active>
        <label>ENA Form Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Groundworks_Commercial_Photos_Task</fullName>
        <active>true</active>
        <label>Groundworks (Commercial) Photos Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Groundworks_Domestic_Photos_Task</fullName>
        <active>true</active>
        <label>Groundworks (Domestic) Photos Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Install_Commercial_Photos_Task</fullName>
        <active>true</active>
        <label>Install (Commercial) Photos Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Install_Domestic_Photos_Task</fullName>
        <active>true</active>
        <label>Install (Domestic) Photos Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Installation_Assessment_Form_Task</fullName>
        <active>true</active>
        <label>Installation Assessment Form Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Maintenance_Form_Task</fullName>
        <active>true</active>
        <label>Maintenance Form Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Maintenance_Form_Trial_Task</fullName>
        <active>true</active>
        <label>Maintenance Form Trial Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Preferred_Chargepoint_Task</fullName>
        <active>true</active>
        <label>Preferred Chargepoint Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>RAMS_Form_Task</fullName>
        <active>true</active>
        <label>RAMS Form Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Simple_Task</fullName>
        <active>true</active>
        <label>Simple Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Site_Handover_Form_Task</fullName>
        <active>true</active>
        <label>Site Handover Form Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Survey_Commercial_Photos_Task</fullName>
        <active>true</active>
        <label>Survey (Commercial) Photos Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Survey_Domestic_Photos_Task</fullName>
        <active>true</active>
        <label>Survey (Domestic) Photos Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Swap_Out_Form_Task</fullName>
        <active>true</active>
        <label>Swap Out Form Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unit_PSL_PG_Number_Task</fullName>
        <active>true</active>
        <label>Unit PSL/PG Number Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wi_Fi_Status_Task</fullName>
        <active>true</active>
        <label>Wi-Fi Status Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>iAuditor_Form_Task</fullName>
        <active>true</active>
        <label>iAuditor Form Task</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>